build.log
/usr/bin/ld: /usr/lib/gcc/x86_64-pc-linux-gnu/14.2.1/../../../../lib/Scrt1.o: in function `_start':
(.text+0x1b): undefined reference to `main'
collect2: error: ld returned 1 exit status
gap/cfg.cpp:32:12: error: ‘c_wc’ was not declared in this scope; did you mean ‘wc’?
   32 | float wc = c_wc;
      |            ^~~~
      |            wc
gap/cfg.cpp:33:12: error: ‘c_mu’ was not declared in this scope; did you mean ‘mu’?
   33 | float mu = c_mu;
      |            ^~~~
      |            mu
gap/cfg.cpp:34:11: error: ‘c_U’ was not declared in this scope
   34 | float U = c_U;
      |           ^~~
gap/config_f.f90:83:28:

   83 |         bcs_cutoff_frequency = c_bcs_cutoff_frequency
      |                            1
Error: Symbol ‘bcs_cutoff_frequency’ at (1) has no IMPLICIT type
gap/config_f.f90:83:28:

   83 |         bcs_cutoff_frequency = c_bcs_cutoff_frequency
      |                            1
Error: Symbol ‘bcs_cutoff_frequency’ at (1) has no IMPLICIT type
gap/response_polarization.f90:37:14:

   37 |             // Set bvec(3,3) equal to brillouin_zone(3,3)
      |              1
Error: Invalid character in name at (1)
gap/response_polarization.f90:37:14:

   37 |             // Set bvec(3,3) equal to brillouin_zone(3,3)
      |              1
Error: Invalid character in name at (1)
